@@ -1,3 +1,8 @@
+2011-12-05  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/51339
+	* gcc.dg/gomp/pr51339.c: New test.
+
 2011-12-05  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/51399
