@@ -1,3 +1,9 @@
+2011-12-05  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/51339
+	* c-decl.c (c_finish_incomplete_decl, finish_decl): Call
+	relayout_decl instead of layout_decl.
+
 2011-12-05  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* resource.c (init_resource_info): Only consider EXIT_IGNORE_STACK
